tests/neg-custom-args/fatal-warnings/i10137.scala
package foo:
  @main def main(): Unit = println("Hello, World!") // error

@main def List(): Unit = println("List") // error
